--- a/packages/dag-history-component/src/components/State/State.scss
+++ b/packages/dag-history-component/src/components/State/State.scss
@@ -3,16 +3,6 @@ $highlight: #f93;
 $black: #000;
 $charcoal: #5d6d7e;
 
-.successor-state-container {
-  list-style: none;
-  margin-left: 30px;
-  margin-bottom: 0px;
-  li {
-    margin: 0;
-    padding: 0;
-  }
-}
-
 .history-state {
   font-family: sans-serif;
   align-items: center;
@@ -26,6 +16,10 @@ $charcoal: #5d6d7e;
   padding: 8px;
   position: relative;
   overflow: hidden;
+
+  &.successor {
+    margin-left: 35px;
+  }
 
   &:not(:hover) {
     border-right: 3px solid transparent;
