--- a/packages/dag-history-component/src/components/State/animate-expand.scss
+++ b/packages/dag-history-component/src/components/State/animate-expand.scss
@@ -1,17 +1,21 @@
-.show-state-enter {
-  transform: translate(100%);
+.state-entry-enter {
+  opacity: 0;
+  transform: translate(0, 50%);
 }
 
-.show-state-enter.show-state-enter-active {
+.state-entry-enter.state-entry-enter-active {
+  opacity: 1;
+  transform: translate(0%, 0%);
+  transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
+}
+
+.state-entry-leave {
+  opacity: 1;
   transform: translate(0%);
-  transition: transform 250ms ease-in-out;
 }
 
-.show-state-leave {
-  transform: translate(0%);
-}
-
-.show-state-leave.show-state-leave-active {
-  transform: translate(100%);
-  transition: transform 250ms ease-in-out;
+.state-entry-leave.state-entry-leave-active {
+  opacity: 0;
+  transform: translate(100%, 0%);
+  transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
 }
