--- a/packages/dag-history-component/src/components/Continuation/Continuation.scss
+++ b/packages/dag-history-component/src/components/Continuation/Continuation.scss
@@ -12,6 +12,7 @@ $grey: #797d7f;
   height: 14px;
   min-width: 14px;
   line-height: 14px;
+  min-height: 14px;
   padding: 2px;
   text-align: center;
 }
