--- a/packages/dag-history-component/src/components/State/animate-expand.scss
+++ b/packages/dag-history-component/src/components/State/animate-expand.scss
@@ -1,17 +1,51 @@
-.show-state-enter {
-  transform: translate(100%);
+/**
+ * State Entry Animation
+ */
+.state-entry-enter {
+  opacity: 0;
+  transform: translate(0, 50%);
 }
 
-.show-state-enter.show-state-enter-active {
+.state-entry-enter.state-entry-enter-active {
+  opacity: 1;
+  transform: translate(0%, 0%);
+  transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
+}
+
+.state-entry-leave {
+  opacity: 1;
   transform: translate(0%);
-  transition: transform 250ms ease-in-out;
 }
 
-.show-state-leave {
-  transform: translate(0%);
+.state-entry-leave.state-entry-leave-active {
+  opacity: 0;
+  transform: translate(100%, 0%);
+  transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
 }
 
-.show-state-leave.show-state-leave-active {
-  transform: translate(100%);
-  transition: transform 250ms ease-in-out;
+/**
+ * Continuation Dissolve Animation
+ */
+.continuation-dissolve-enter {
+  opacity: 0;
+  width: 0;
+  transition: opacity 250ms ease-in-out, width 250ms ease-in-out;
+}
+
+.continuation-dissolve-enter.continuation-dissolve-enter-active {
+  opacity: 1;
+  width: 14px;
+  transition: opacity 250ms ease-in-out, width 250ms ease-in-out;
+}
+
+.continuation-dissolve-leave {
+  opacity: 1;
+  width: 14px;
+  transition: opacity 250ms ease-in-out, width 250ms ease-in-out;
+}
+
+.continuation-dissolve-leave.continuation-dissolve-leave-active {
+  opacity: 0;
+  width: 0px;
+  transition: opacity 250ms ease-in-out, width 250ms ease-in-out;
 }
