Remove transport control blue focus outline

--- a/packages/dag-history-component/src/components/Transport/Transport.scss
+++ b/packages/dag-history-component/src/components/Transport/Transport.scss
@@ -3,4 +3,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
+  /**
+   * Remove the blue focus-outline
+   */
+  outline: none;
 }
